# algorytmy_inspirowane_natura

./: .gitignore  CMakeLists.txt  README.md
include/: Point.h  circle.h  distributions.h  ecdf_summary.h  evaluation_functions.h  evolutionary_algorithm.h  evolutionary_test_int.h  functions.h  local_search.h  simulated_annealing.h
kolokwium2/: CMakeLists.txt
lab1_files/: inside_circle.txt  outside_circle.txt
lab2_files/: Zadanie_2_119229_119233.ods  execution_times_10.csv  execution_times_2.csv  execution_times_5.csv  n1_avg.txt  n1_data.csv  n1_data.txt  n2_avg.txt  n2_data.csv  n2_data.txt  n3_avg.txt  n3_data.csv  n3_data.txt
lab3_files/: best_values_annealing_fun_1_binary.csv  best_values_annealing_fun_1_double.csv  best_values_annealing_fun_2_binary.csv  best_values_annealing_fun_2_double.csv  execution_times_annealing_fun_1_binary.csv  execution_times_annealing_fun_1_double.csv  execution_times_annealing_fun_2_binary.csv  execution_times_annealing_fun_2_double.csv
src/: Point.cpp  circle.cpp  (+8 more)
zawody1/: CMakeLists.txt
zawody1/data/: 5_dim_ECDF.csv  merge_results.py  test_rosenbrock.csv  test_salomon.csv  test_whitney.csv  zawody_1_ecdf.xlsx
zawody1/evaluation_functions_plots/: generate_plots.py  test_rosenbrock.csv  test_salomon.csv  test_whitney.csv
zawody1/include/: Float_representation.h  ecdf_summary.h  eval_experiments.h  evaluation_functions.h  evolutionary_algorithm.h  operators_and_selection.h
zawody1/src/: Float_representation.cpp  ecdf_summary.cpp  eval_experiments.cpp  evolutionary_algorithm.cpp  main.cpp  operators_and_selection.cpp
(+44 files in other folders)
